--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,8 @@
       ],
       "matches": [
         "<all_urls>"
-      ]
+      ],
+      "use_dynamic_url": true
     }
   ],
   "content_scripts": [
